add_executable(cpp_samples  
    main.cpp 
    crash_course.cpp 
    stringView.cpp 
    memoryManagement.cpp
    objectsAndClassesBasics.cpp
    SpreadsheetCell.cpp
    advancedClasses.cpp
    Spreadsheet.cpp
    inheritance.cpp
    NewSpreadsheetCell.cpp
    NewSpreadsheetCell.h
    testGenerics.cpp
    testGenerics.h
    Grid.cpp
    Grid.h
        testIOStreams.cpp
        testIOStreams.h
)